--- a/index.html
+++ b/index.html
@@ -961,9 +961,9 @@
 
                                     <p class="blog-text">
 
-                                    <table id="contribution-table">
-                                        <!-- The table will be generated here -->
-                                    </table>
+                                    <!--<table id="contribution-table">
+                                    </table>-->
+                                    <img src="assets/images/github-stats/stats.png" alt="github 2023 stats" style="width: 100%;">
 
                                     <!--<div class="blog-content">-->
                                     <br />
@@ -1212,71 +1212,73 @@
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
     <script>
-// const username = "garimasinghgryffindor"; // Replace with your Github username
-// const accessToken = "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"; // Replace with your personal access token
-// const apiUrl = "https://api.github.com/graphql";
+//const username = "garimasinghgryffindor"; // Replace with your Github username
+//const accessToken = "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"; // Replace with your personal access token
+//const apiUrl = "https://api.github.com/graphql";
 
-// const query = `
-//   query {
-//     user(login: "${username}") {
-//       contributionsCollection {
-//         contributionCalendar {
-//           totalContributions
-//           weeks {
-//             contributionDays {
-//               contributionCount
-//               date
-//             }
-//           }
-//         }
-//       }
-//     }
-//   }
-// `;
+//const query = `
+//  query {
+//    user(login: "${username}") {
+//      contributionsCollection {
+//        contributionCalendar {
+//          totalContributions
+//          weeks {
+//            contributionDays {
+//              contributionCount
+//              date
+//            }
+//          }
+//        }
+//      }
+//    }
+//  }
+//`;
 
-// fetch(apiUrl, {
-//   method: "POST",
-//   headers: {
-//     Authorization: `Bearer ${accessToken}`,
-//     "Content-Type": "application/json",
-//   },
-//   body: JSON.stringify({ query }),
-// })
-//   .then((response) => response.json())
-//   .then((data) => {
-//     const contributions = data.data.user.contributionsCollection.contributionCalendar;
-//     const weeks = contributions.weeks;
+//fetch(apiUrl, {
+//  method: "POST",
+//  headers: {
+//    Authorization: `Bearer ${accessToken}`,
+//    "Content-Type": "application/json",
+//  },
+//  body: JSON.stringify({ query }),
+//})
+//  .then((response) => response.json())
+//  .then((data) => {
+//    const contributions = data.data.user.contributionsCollection.contributionCalendar;
+//    const weeks = contributions.weeks;
 
-//     // Create the table structure based on contributions data
-//     const contributionTable = document.getElementById("contribution-table");
-//     for (let dayOfWeek = 0; dayOfWeek < 7; dayOfWeek++) {
-//       const row = document.createElement("tr");
-//       for (let weekIndex = 0; weekIndex < 53; weekIndex++) {
-//         const week = weeks[weekIndex];
-//         const contributionDay = week.contributionDays[dayOfWeek];
-//         const contributionCount = contributionDay ? contributionDay.contributionCount : 0;
-//         const td = document.createElement("td");
-//         let contributionColor;
-//         if (contributionCount < 5) {
-//           contributionColor = 0;
-//         } else if (contributionCount < 10) {
-//           contributionColor = 1;
-//         } else if (contributionCount < 15) {
-//           contributionColor = 2;
-//         } else if (contributionCount < 20) {
-//           contributionColor = 3;
-//         } else {
-//           contributionColor = 4;
-//         }
-//         td.className = `color-${contributionColor}`;
-//         row.appendChild(td);
-//       }
-//       contributionTable.appendChild(row);
-//     }
-//   })
-//   .catch((error) => {
-//     console.error("Error fetching GitHub contributions:", error);
-//   });
+//    // Create the table structure based on contributions data
+//    const contributionTable = document.getElementById("contribution-table");
+//    for (let dayOfWeek = 0; dayOfWeek < 7; dayOfWeek++) {
+//      const row = document.createElement("tr");
+//      for (let weekIndex = 0; weekIndex < 53; weekIndex++) {
+//        const week = weeks[weekIndex];
+//        const contributionDay = week.contributionDays[dayOfWeek];
+//        const contributionCount = contributionDay ? contributionDay.contributionCount : 0;
+//        const td = document.createElement("td");
+//        let contributionColor;
+//        if (contributionCount == 0) {
+//          contributionColor = 0;
+//        } else if (contributionCount < 5) {
+//          contributionColor = 1;
+//        } else if (contributionCount < 10) {
+//          contributionColor = 2;
+//        } else if (contributionCount < 15) {
+//          contributionColor = 3;
+//        } else if(contributionCount < 20) {
+//            contributionColor = 4;
+//        } else {
+//          contributionColor = 5;
+//        }
+//        td.className = `color-${contributionColor}`;
+//        row.appendChild(td);
+//      }
+//      contributionTable.appendChild(row);
+//    }
+//  })
+//  .catch((error) => {
+//    console.error("Error fetching GitHub contributions:", error);
+//  });
 
     </script>
 
