--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@
 
                 <section class="projects">
 
-                    <ul class="filter-list">
+                    <!--<ul class="filter-list">
 
                         <li class="filter-item">
                             <button class="active" data-filter-btn>All</button>
@@ -649,7 +649,7 @@
                             <button data-filter-btn>Machine Learning</button>
                         </li>
 
-                    </ul>
+                    </ul>-->
 
                     <div class="filter-select-box">
 
