--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="./assets/css/linkedinpost.css">
     <link rel="stylesheet" href="./assets/css/tablecss.css">
     <link rel="stylesheet" href="./assets/css/badges.css">
+    <link rel="stylesheet" href="./assets/css/skills-portfolio.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
         integrity="sha384-GLhlTQ8iN17PdL7vR7RTOZFVaUdNQ+T9S263i6TJXYiS7Z1v1e5U5dY3eI5FkDfR" crossorigin="anonymous">
 
@@ -493,7 +494,7 @@
                         </li>
 
                         <li class="timeline-item">
-                            <h4 class="h4 timeline-item-title">Striver’s SDE Sheet Challenge</h4>
+                            <h4 class="h4 timeline-item-title">Striver's SDE Sheet Challenge</h4>
                             <span>One of the winners, and received goodies from Coding Ninjas.</span>
                             <span>Aug 2023</span>
                         </li>
@@ -701,8 +702,26 @@
                                     <img src="./assets/images/projects/attendance.png" alt="finance" loading="lazy">
                                 </figure>
 
-                                <h3 class="project-title">Attendance Monitoring System using Facial & Geolocation</h3>
+                                <div class="skills-portfolio">
+                                    <div class="skills-portfolio-icons hazy-container">
+                                        <img src="./assets/images/skills/--portfolio/react.png" title="ReactJS"
+                                            class="skills-portfolio-icon-img" alt="ReactJS" width="24">
+                                    </div>
+                                    <div class="skills-portfolio-icons hazy-container">
+                                        <img src="./assets/images/skills/--portfolio/node.png" title="NodeJS"
+                                            class="skills-portfolio-icon-img" alt="nodeJS" width="40">
+                                    </div>
+                                    <div class="skills-portfolio-icons hazy-container">
+                                        <img src="./assets/images/skills/--portfolio/mongo.png" title="MongoDB"
+                                            class="skills-portfolio-icon-img" alt="MongoDB" width="27">
+                                    </div>
+                                    <div class="skills-portfolio-icons hazy-container">
+                                        <img src="./assets/images/skills/--portfolio/aws.png" title="AWS"
+                                            class="skills-portfolio-icon-img" alt="AWS S3" width="27">
+                                    </div>
+                                </div>
 
+                                <h3 class="project-title">Attendance Monitoring System using Facial & Geolocation</h3>
                                 <p class="project-category">Web Development</p>
 
                             </a>
@@ -728,8 +747,25 @@
                                     <img src="./assets/images/projects/netflix-clone.png" alt="orizon" loading="lazy">
                                 </figure>
 
+                                <div class="skills-portfolio">
+                                    <div class="skills-portfolio-icons hazy-container">
+                                        <img src="./assets/images/skills/--portfolio/react.png" title="ReactJS"
+                                            class="skills-portfolio-icon-img" alt="ReactJS" width="24">
+                                    </div>
+                                    <div class="skills-portfolio-icons hazy-container">
+                                        <img src="./assets/images/skills/--portfolio/node.png" title="NodeJS"
+                                            class="skills-portfolio-icon-img" alt="nodeJS" width="40">
+                                    </div>
+                                    <!--<div class="skills-portfolio-icons hazy-container">
+                                        <img src="./assets/images/skills/--portfolio/mongo.png" title="MongoDB"
+                                            class="skills-portfolio-icon-img" alt="MongoDB" width="27">
+                                    </div>-->
+                                    <div class="skills-portfolio-icons hazy-container">
+                                        <img src="./assets/images/skills/--portfolio/tmdb.png" title="AMDB API"
+                                            class="skills-portfolio-icon-img" alt="TMDB API" width="80">
+                                    </div>
+                                </div>
                                 <h3 class="project-title">Netflix Clone</h3>
-
                                 <p class="project-category">Web development</p>
 
                             </a>
@@ -755,8 +791,26 @@
                                     <img src="./assets/images/projects/amazon-clone.png" alt="orizon" loading="lazy">
                                 </figure>
 
-                                <h3 class="project-title">Amazon Clone</h3>
+                                <div class="skills-portfolio">
+                                    <div class="skills-portfolio-icons hazy-container">
+                                        <img src="./assets/images/skills/--portfolio/react.png" title="ReactJS"
+                                            class="skills-portfolio-icon-img" alt="ReactJS" width="24">
+                                    </div>
+                                    <div class="skills-portfolio-icons hazy-container">
+                                        <img src="./assets/images/skills/--portfolio/node.png" title="NodeJS"
+                                            class="skills-portfolio-icon-img" alt="nodeJS" width="40">
+                                    </div>
+                                    <div class="skills-portfolio-icons hazy-container">
+                                        <img src="./assets/images/skills/--portfolio/firebase.png" title="Firebase"
+                                            class="skills-portfolio-icon-img" alt="Firebase" width="28">
+                                    </div>
+                                    <div class="skills-portfolio-icons hazy-container">
+                                        <img src="./assets/images/skills/--portfolio/stripe.png" title="Stripe"
+                                            class="skills-portfolio-icon-img" alt="Stripe" width="45">
+                                    </div>
+                                </div>
 
+                                <h3 class="project-title">Amazon Clone</h3>
                                 <p class="project-category">Web development</p>
 
                             </a>
