--- a/index.html
+++ b/index.html
@@ -756,13 +756,9 @@
                                         <img src="./assets/images/skills/--portfolio/node.png" title="NodeJS"
                                             class="skills-portfolio-icon-img" alt="nodeJS" width="40">
                                     </div>
-                                    <!--<div class="skills-portfolio-icons hazy-container">
-                                        <img src="./assets/images/skills/--portfolio/mongo.png" title="MongoDB"
-                                            class="skills-portfolio-icon-img" alt="MongoDB" width="27">
-                                    </div>-->
                                     <div class="skills-portfolio-icons hazy-container">
-                                        <img src="./assets/images/skills/--portfolio/tmdb.png" title="AMDB API"
-                                            class="skills-portfolio-icon-img" alt="TMDB API" width="80">
+                                        <img src="./assets/images/skills/--portfolio/scikit-learn.png" title="scikit-learn"
+                                            class="skills-portfolio-icon-img" alt="scikit-learn" width="44">
                                     </div>
                                 </div>
                                 <h3 class="project-title">Netflix Clone</h3>
@@ -836,8 +832,23 @@
                                     <img src="./assets/images/projects/recruit.png" alt="orizon" loading="lazy">
                                 </figure>
 
-                                <h3 class="project-title">Recruit</h3>
+                                <div class="skills-portfolio">
+                                    <div class="skills-portfolio-icons hazy-container">
+                                        <img src="./assets/images/skills/--portfolio/react.png" title="ReactJS"
+                                            class="skills-portfolio-icon-img" alt="ReactJS" width="24">
+                                    </div>
+                                    <!--<div class="skills-portfolio-icons hazy-container">
+                                        <img src="./assets/images/skills/--portfolio/node.png" title="NodeJS"
+                                            class="skills-portfolio-icon-img" alt="nodeJS" width="40">
+                                    </div>-->
+                                    <div class="skills-portfolio-icons hazy-container">
+                                        <img src="./assets/images/skills/--portfolio/figma.png" title="Figma"
+                                            class="skills-portfolio-icon-img" alt="Figma" width="16">
+                                    </div>
 
+                                </div>
+
+                                <h3 class="project-title">Recruit</h3>
                                 <p class="project-category">Web development</p>
 
                             </a>
@@ -861,8 +872,26 @@
                                     <img src="./assets/images/projects/rfid.png" alt="orizon" loading="lazy">
                                 </figure>
 
-                                <h3 class="project-title">Smart Ticket Issuing</h3>
+                                <div class="skills-portfolio">
+                                    <div class="skills-portfolio-icons hazy-container">
+                                        <img src="./assets/images/skills/--portfolio/arduino.png" title="Arduino Uno"
+                                            class="skills-portfolio-icon-img" alt="Arduino" width="30">
+                                    </div>
+                                    <div class="skills-portfolio-icons hazy-container">
+                                        <img src="./assets/images/skills/--portfolio/mit-app.png" title="MIT -app inventor"
+                                            class="skills-portfolio-icon-img" alt="MIT-app inventor" width="28">
+                                    </div>
+                                    <div class="skills-portfolio-icons hazy-container">
+                                        <img src="./assets/images/skills/--portfolio/rfid.png" title="RFID"
+                                            class="skills-portfolio-icon-img" alt="RFID" width="40">
+                                    </div>
+                                    <!--<div class="skills-portfolio-icons hazy-container">
+                                        <img src="./assets/images/skills/--portfolio/stripe.png" title="Stripe"
+                                            class="skills-portfolio-icon-img" alt="Stripe" width="45">
+                                    </div>-->
+                                </div>
 
+                                <h3 class="project-title">Smart Ticket Issuing</h3>
                                 <p class="project-category">IoT</p>
 
                             </a>
@@ -889,8 +918,26 @@
                                     <img src="./assets/images/projects/zemech.png" alt="orizon" loading="lazy">
                                 </figure>
 
-                                <h3 class="project-title">Zemech</h3>
+                                <div class="skills-portfolio">
+                                    <div class="skills-portfolio-icons hazy-container">
+                                        <img src="./assets/images/skills/--portfolio/react.png" title="ReactJS"
+                                            class="skills-portfolio-icon-img" alt="ReactJS" width="24">
+                                    </div>
+                                    <div class="skills-portfolio-icons hazy-container">
+                                        <img src="./assets/images/skills/--portfolio/node.png" title="NodeJS"
+                                            class="skills-portfolio-icon-img" alt="nodeJS" width="40">
+                                    </div>
+                                    <div class="skills-portfolio-icons hazy-container">
+                                        <img src="./assets/images/skills/--portfolio/mongo.png" title="MongoDB"
+                                            class="skills-portfolio-icon-img" alt="MongoDB" width="27">
+                                    </div>
+                                    <div class="skills-portfolio-icons hazy-container">
+                                        <img src="./assets/images/skills/--portfolio/Bootstrap.png" title="Bootstrap"
+                                            class="skills-portfolio-icon-img" alt="Bootstrap" width="27">
+                                    </div>
+                                </div>
 
+                                <h3 class="project-title">Zemech</h3>
                                 <p class="project-category">Web development</p>
 
                             </a>
@@ -916,8 +963,18 @@
                                     <img src="./assets/images/projects/keeper-app.png" alt="orizon" loading="lazy">
                                 </figure>
 
-                                <h3 class="project-title">Keeper-App</h3>
+                                <div class="skills-portfolio">
+                                    <div class="skills-portfolio-icons hazy-container">
+                                        <img src="./assets/images/skills/--portfolio/react.png" title="ReactJS"
+                                            class="skills-portfolio-icon-img" alt="ReactJS" width="24">
+                                    </div>
+                                    <div class="skills-portfolio-icons hazy-container">
+                                        <img src="./assets/images/skills/--portfolio/css-3.png" title="CSS"
+                                            class="skills-portfolio-icon-img" alt="CSS" width="28">
+                                    </div>
+                                </div>
 
+                                <h3 class="project-title">Keeper-App</h3>
                                 <p class="project-category">Web development</p>
 
                             </a>
@@ -942,8 +999,18 @@
                                         loading="lazy">
                                 </figure>
 
-                                <h3 class="project-title">Hand-written digit recognition</h3>
+                                <div class="skills-portfolio">
+                                    <div class="skills-portfolio-icons hazy-container">
+                                        <img src="./assets/images/skills/--portfolio/tf.png" title="Tensorflow"
+                                            class="skills-portfolio-icon-img" alt="Tensorflow" width="28">
+                                    </div>
+                                    <div class="skills-portfolio-icons hazy-container">
+                                        <img src="./assets/images/skills/--portfolio/python.png" title="Python"
+                                            class="skills-portfolio-icon-img" alt="Python" width="27">
+                                    </div>
+                                </div>
 
+                                <h3 class="project-title">Hand-written digit recognition</h3>
                                 <p class="project-category">Machine Learning</p>
 
                             </a>
