--- a/index.html
+++ b/index.html
@@ -1083,6 +1083,8 @@
 
                                     <p class="blog-text">
                                     <div class="badges">
+                                        <img class="badge" src="./assets/images/LeetCode/2024-02.gif"
+                                            alt="2024 Feb Badge">
                                         <img class="badge" src="./assets/images/LeetCode/2023-100.gif"
                                             alt="100 Days Badge">
                                         <img class="badge" src="./assets/images/LeetCode/2023-50.gif"
