--- a/index.html
+++ b/index.html
@@ -1121,8 +1121,13 @@
                                             alt="2024 Mar Badge">
                                             <img class="badge" src="./assets/images/LeetCode/2024-04.gif"
                                             alt="2024 Apr Badge">
+                                            <img class="badge" src="./assets/images/LeetCode/2024-05.gif"
+                                            alt="2024 May Badge">
                                             <img class="badge" src="./assets/images/LeetCode/2024-50.gif"
                                                 alt="50 Days Badge 2024">
+                                        </div>
+                                        <br/>
+                                        <div class="badges">
                                             <img class="badge" src="./assets/images/LeetCode/2024-100-new.gif"
                                                 alt="100 Days Badge 2024">
                                         </div>
