--- a/index.html
+++ b/index.html
@@ -1164,7 +1164,7 @@
                         </li>
 
                         <li class="blog-post-item">
-                            <a href="https://www.hackerrank.com/profile/l_singh999thdc" target="_blank">
+                            <a href="https://www.hackerrank.com/profile/vecna_" target="_blank">
                                 <div class="blog-content">
                                     <h3 class="h3 blog-item-title"><i class="fa-brands fa-hackerrank"
                                             style="margin-right:9px; font-size: 21px;"></i>Hackerrank Badges</h3>
