--- a/index.html
+++ b/index.html
@@ -1130,6 +1130,8 @@
                                         <div class="badges">
                                             <img class="badge" src="./assets/images/LeetCode/2024-100-new.gif"
                                                 alt="100 Days Badge 2024">
+                                            <img class="badge" src="./assets/images/LeetCode/2024-200.gif"
+                                            alt="200 Days Badge 2024">
                                         </div>
         
                                         <br />
