--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                         <div class="contact-info">
                             <p class="contact-title">Email</p>
 
-                            <a href="mailto:alfaizkhan2810@gmail.com"
+                            <a href="mailto:garima.singh.2016744@gmail.com"
                                 class="contact-link">garima.singh.2016744@gmail.com</a>
                         </div>
 
