--- a/index.html
+++ b/index.html
@@ -1132,6 +1132,8 @@
                                                 alt="100 Days Badge 2024">
                                             <img class="badge" src="./assets/images/LeetCode/2024-200.gif"
                                             alt="200 Days Badge 2024">
+                                            <img class="badge" src="./assets/images/LeetCode/2024-500.gif"
+                                            alt="500 Days Badge 2024">
                                         </div>
         
                                         <br />
