--- a/index.html
+++ b/index.html
@@ -1133,7 +1133,9 @@
                                             <img class="badge" src="./assets/images/LeetCode/2024-200.gif"
                                             alt="200 Days Badge 2024">
                                             <img class="badge" src="./assets/images/LeetCode/2024-500.gif"
-                                            alt="500 Days Badge 2024">
+                                            alt="500 Days Badge">
+                                            <img class="badge" src="./assets/images/LeetCode/365.gif"
+                                            alt="365 Days Badge 2024">
                                         </div>
         
                                         <br />
